[package]
name = "larql-compute"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Compute backends for LARQL — CPU (BLAS), Metal (GPU), CUDA (planned). Owns matmul dispatch, Q4 kernels, buffer management."
keywords = ["matmul", "metal", "gpu", "quantization", "blas"]
categories = ["science"]

[dependencies]
# Matrix types
ndarray = { version = "0.16", features = ["blas"] }

# BLAS backend - platform specific
# macOS: use Accelerate framework
[target.'cfg(target_os = "macos")'.dependencies]
blas-src = { version = "0.10", features = ["accelerate"] }
metal = { version = "0.29", optional = true }

# Windows: use Intel MKL (pre-built, no compilation needed)
[target.'cfg(target_os = "windows")'.dependencies]
blas-src = { version = "0.10", default-features = false, features = ["intel-mkl"] }
intel-mkl-src = { version = "0.8", features = ["mkl-static-lp64-seq"] }

# Linux: use OpenBLAS
[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
blas-src = { version = "0.10", features = ["openblas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }

[features]
default = []
metal = ["dep:metal"]
# cuda = []  # Future: CUDA backend

[build-dependencies]
cc = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = "0.5"
serde_json = "1"
memmap2 = "0.9"

[[bench]]
name = "matmul"
harness = false
